second attempt deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/note-app",
+  "homepage": "https://vldbick.github.io/note-app",
   "name": "note-app",
   "version": "0.1.0",
   "private": true,
